@@ -1,6 +1,6 @@
-echo 1 22 333 4444 55555 
-echo 666666 7777777 
-echo 88888888 999999999 
-echo 1 22 333 4444 55555 
-echo 666666 7777777 
-echo 88888888 999999999 
+echo 1 22 333 4444 55555
+echo 666666 7777777
+echo 88888888 999999999
+echo 1 22 333 4444 55555
+echo 666666 7777777
+echo 88888888 999999999
