@@ -1,2 +1,2 @@
-echo foo bar 
-echo baz ugh 
+echo foo bar
+echo baz ugh
